--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
             Card kamol
         </button>
     </div>
+    <div style="border: 1px solid #ccc; border-radius: 8px; padding: 16px; width: 300px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <h2 style="margin: 0 0 8px;">Card Title</h2>
+        <p style="margin: 0 0 16px;">This is a simple card with some text content.</p>
+        <button style="background-color: #007BFF; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
+            Card 3
+        </button>
+    </div>
 </body>
 </html>
