--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2 style="margin: 0 0 8px;">Card Title</h2>
         <p style="margin: 0 0 16px;">This is a simple card with some text content.</p>
         <button style="background-color: #007BFF; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">
-            Card 3
+            Card three
         </button>
     </div>
 </body>
